add search on site and send posts email 05.10.2021

--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,4 +1,3 @@
-<!-- templates/about/author.html -->
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Об авторе проекта{% endblock %}
@@ -45,7 +44,7 @@
     <div class="card shadow-lg p-1 mb-1 rounded bg-light">
       <div class="card-body">
         <div class="row">
-            <p class="card-text" align="justify">
+            <p align="justify">
             Доброе время суток, меня зовут Дмитрий, и я родом из Казахстана, начинающий разработчик Python.
             Но Python это не единственная цель в моей жизни, в планах освоить и другие языки, такие как Golang и Kotlin.
             На данный момент я являюсь студентом <a href="https://practicum.yandex.ru" target="_blank">Яндекс.Практикум</a> по специализации <a href="https://practicum.yandex.ru/profile/backend-developer/" target="_blank">Python - разработчик (back-end)</a>
