--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -1,17 +1,16 @@
-<!-- templates/about/tech.html -->
 {% extends "base.html" %}
 {% block title %}Технологии{% endblock %}
 {% block content %}
 
 <div class="row p-2 mb-2 shadow-lg rounded bg-light">
   
-  <div class="card p-2 mb-2 shadow-lg p-2 mb-2 rounded bg-light">
-    <div class="card-body shadow-lg">
+  <div class="card p-2 mb-2">
+    <div class="card-body">
       <h1 class="card-title">Технологии</h1>
     </div>
   </div>
 
-  <aside class="col-12 col-md-3 p-1 shadow-lg p-2 mb-2 rounded bg-light">
+  <aside class="col-12 col-md-3 p-1">
       <div class="list-group">
         <a href="https://www.python.org/downloads/" class="list-group-item list-group-item-action" target="_blank">Python</a>
         <a href="https://www.djangoproject.com/" class="list-group-item list-group-item-action" target="_blank">Django</a>
@@ -23,8 +22,8 @@
       </div>
   </aside>
 
-  <article class="col-12 col-md-9 shadow-lg p-2 mb-2 rounded bg-light">
-    <div class="card p-2 mb-2 rounded bg-light shadow-lg">
+  <article class="col-12 col-md-9 p-2 mb-2">
+    <div class="card shadow-lg p-1 mb-1 rounded bg-light">
       <div class="card-body">
         <div class="row">
               <h4 class="alert-heading">Проект блог социальная сеть PyBlog</h4>
