--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -16,6 +16,11 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
       <title>{% block title %}{% endblock %}</title>
+      <script>
+        $(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+      </script>
   </head>
     <body class="bg-white">
     {% include 'includes/header.html' %}
