--- a/yatube/templates/posts/includes/switcher.html
+++ b/yatube/templates/posts/includes/switcher.html
@@ -12,6 +12,11 @@
           Избранные авторы
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link {% if edit %}active{% endif %}" href="{% url 'posts:create' %}">
+          Новая запись
+        </a>
+      </li>
     </ul>
   </div>
 {% endif %}
