--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -5,7 +5,10 @@
 {% block content %}
 
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
+  <aside class="col-12 col-md-3 shadow-lg p-2 mb-2 bg-white rounded">
   {% include 'posts/includes/aside.html' %}
+  {% include 'posts/includes/aside_list.html' %}
+  </aside>
   <article class="col-12 col-md-9">
     <div class="card shadow-lg p-1 mb-1 bg-white rounded" style="width: 100%">
       {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
@@ -60,15 +63,15 @@
     </div>
 
       {% load user_filters %}
-      {% if comments.count != 0 %}
-      {% with comments.count as total_comments %}
+      {% if comments_details.count != 0 %}
+      {% with comments_details.count as total_comments %}
       <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
       Комментариев {{ total_comments }}
       </div>
       {% endwith %}
       {% endif %}
 
-      {% for comment in comments %}
+      {% for comment in comments_details %}
       <div class="card shadow-lg p-2 mb-2 bg-white rounded" style="max-width: 100%;">
         <div class="row p-2 mb-2">
           <div class="col-md-2">
