--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
+{% load static %}
+{% load thumbnail %}
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
+<aside class="col-12 col-md-3 shadow-lg p-2 mb-2 bg-white rounded">
+{% include 'posts/includes/aside.html' %} 
 {% include 'posts/includes/aside_list.html' %}
+</aside>
 <article class="col-12 col-md-9">
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
   {% include 'posts/includes/switcher.html' with index=True %}
   {% load cache %}
-  {% cache 60 index_page page_obj %}
+  {% cache 1 index_page page_obj %}
   {% for post in page_obj %}
     {% include 'posts/includes/ul_posts.html' %}
     {% include 'posts/includes/post_block.html' %}
@@ -19,6 +24,7 @@
       {% if post.group %}
         <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
       {% endif %}
+      <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
       </li>
     </ul>
 
