--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Подписки{% endblock %}
 {% block content %}
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
@@ -18,6 +19,7 @@
             <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
             {% endif %}
             <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
+            <img width="24" height="24" class="rounded img-fluid" src="{% static 'img/views_posts.png' %}" alt="нет фото"> <strong>{{post.total_views}}</strong>
         </div>
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
