--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Записи сообщества: {{ group.title }}{% endblock %}
 {% block content %}
 
@@ -16,7 +17,8 @@
 
   <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
     <a href="{% url 'posts:post_detail' post.id %}" class="btn btn-light"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>
-    <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a> 
+    <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
+    <img width="24" height="24" class="rounded img-fluid" src="{% static 'img/views_posts.png' %}" alt="нет фото"> <strong>{{post.total_views}}</strong> 
   </div>
 
   {% if not forloop.last %}<hr>{% endif %}
