--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -19,26 +19,24 @@
 </aside>
 
 <article class="col-12 col-md-9">
-    {% for post in page_obj %}
-
-        <ul class="list-group shadow-lg p-1 mb-1 bg-white rounded">
-            <li class="list-group-item list-group-item-light">
-            Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
-            </li>
-        </ul>
-
-        {% include 'posts/includes/post_block.html' %}
-
-        <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
-            <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>  
-            {% if post.group %}
-            <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
-            {% endif %}
-            <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
-        </div>
-        {% if not forloop.last %}{% endif %}
-    {% endfor %}
-    {% include 'posts/includes/paginator.html' %}
+{% for post in page_obj %}
+    <ul class="list-group shadow-lg p-1 mb-1 bg-white rounded">
+        <li class="list-group-item list-group-item-light">
+        Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
+        </li>
+    </ul>
+    {% include 'posts/includes/post_block.html' %}
+    <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
+        <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>  
+        {% if post.group %}
+        <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
+        {% endif %}
+        <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
+        <img width="24" height="24" class="rounded img-fluid" src="{% static 'img/views_posts.png' %}" alt="нет фото"> <strong>{{post.total_views}}</strong>
+    </div>
+    {% if not forloop.last %}{% endif %}
+{% endfor %}
+{% include 'posts/includes/paginator.html' %}
 </article>
 </div>
 {% endblock %}
