--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -16,16 +16,11 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
       <title>{% block title %}{% endblock %}</title>
-      <script>
-        $(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-      </script>
   </head>
-    <body class="bg-white">
+    <body> 
     {% include 'includes/header.html' %}
     <main>
-      <div class="container py-1">
+      <div class="container py-5">
         {% block content %}
         {% endblock %}
       </div>
