--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,4 +1,3 @@
-<footer class="border-top text-center p-1 bg-dark" style="color:white">
-    <p>©{% now 'Y' %} Copyright <span style="color:red">Py</span>Blog</p>
-    <p>Блог разработан на основе учебных материалов <span style="color:red">Яндекс</span>.Практикум</p>
+<footer class="border-top text-center py-3">
+    <p>©{% now 'Y' %} Copyright <span style="color:red">Ya</span>tube</p>
 </footer>
