--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,24 +1,11 @@
 {% extends "base.html" %}
 {% block title %}{% if is_edit %}Редактировать запись{% else %}Добавить запись{% endif %}{% endblock %}
-
-{% load static %}
-{% load thumbnail %}
-
 {% block content %}
-
-<div class="row shadow-lg p-2 mb-2 bg-white rounded">
-<aside class="col-12 col-md-3 shadow-lg p-2 mb-2 bg-white rounded">
-{% include 'posts/includes/aside.html' %} 
-{% include 'posts/includes/aside_list.html' %}
-</aside>
-<article class="col-12 col-md-9">
-<div class="row shadow-lg p-2 mb-2 bg-white rounded">
-
 <div class="row justify-content-center">
-<div class="col">
+<div class="col-md-8 p-5">
   <div class="card">
+    <div class="card-header">{% if is_edit %}Редактировать запись{% else %}Добавить запись{% endif %}</div>
     <div class="card-body">
-        {% if is_edit %}Редактировать запись{% else %}Добавить новую запись{% endif %}
         {% load user_filters %}
         {% if form.errors %}
             {% for field in form %}
@@ -41,7 +28,6 @@
               action="{% url 'posts:create' %}" 
           {% endif %}} enctype="multipart/form-data">
           {% csrf_token %}
-          {{ form.media }}
           {% for field in form %}<div class="form-group row my-3"
             {% if field.field.required %} 
               aria-required="true"
@@ -72,9 +58,5 @@
     </div>
   </div>
 </div>
-</div>
-
-</div>
-</article>
 </div>
 {% endblock %}
