--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,28 +1,43 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load thumbnail %}
 {% block title %}Записи сообщества: {{ group.title }}{% endblock %}
 {% block content %}
-
-<div class="row shadow-lg p-2 mb-2 bg-white rounded">
-  {% include 'posts/includes/switcher.html' %}
-  <div class="card bg-light" style="width: 100%">
-    <div class="card-body">
-      <h1 class="card-title">{{ group.title }}</h1>
-      <p class="card-text">{{ group.description|linebreaks }}</p>
-    </div>
+{% include 'posts/includes/switcher.html' %}
+<div class="card bg-light" style="width: 100%">
+  <div class="card-body">
+    <h1 class="card-title">{{ group.title }}</h1>
+    <p class="card-text">{{ group.description|linebreaks }}</p>
   </div>
-  {% for post in page_obj %}
-  {% include 'posts/includes/ul_posts.html' %}
-  {% include 'posts/includes/post_block.html' %}
+</div>
 
-  <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
-    <a href="{% url 'posts:post_detail' post.id %}" class="btn btn-light"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>
-    <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Комментариев: <strong>{{ post.comments.count }}</strong></button></a>
-    <img width="24" height="24" class="rounded img-fluid" src="{% static 'img/views_posts.png' %}" alt="нет фото"> <strong>{{post.total_views}}</strong> 
+{% for post in page_obj %}
+<ul class="list-group">
+ <li class="list-group-item list-group-item-light">
+   Автор: <a href="{% url 'posts:profile' post.author %}">
+     {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{% endif %}
+   </a>
+ </li>
+ <li class="list-group-item list-group-item-light">
+   Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
+ </li>
+</ul>
+
+<div class="card bg-light" style="width: 100%">
+  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+  <img class="card-img-top" src="{{ im.url }}">
+  {% endthumbnail %}
+  <div class="card-body">
+    <h4 class="card-title">Заголовок</h4>
+    <p class="card-text">
+      {{ post.text|linebreaksbr }}
+    </p>
+    <a href="{% url 'posts:post_detail' post.id %}" class="btn btn-primary">Подробная информация</a>  
   </div>
+</div>
 
-  {% if not forloop.last %}<hr>{% endif %}
-  {% endfor %}
-  {% include 'posts/includes/paginator.html' %}
+{% if not forloop.last %}<hr>{% endif %}
+{% endfor %}
+<div class="d-flex justify-content-center">
+  <div>{% include 'posts/includes/paginator.html' %}</div>
 </div>
 {% endblock %}
