--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -48,7 +48,7 @@
             </div>
           </div>
         {% endfor %}
-          <div class="d-flex justify-content-center">
+          <div class="col-md-6 offset-md-4">
             <button type="submit" class="btn btn-primary">Сбросить пароль</button>
           </div>
           </form>
